fixed div overlapping

--- a/my_rails_project/app/assets/stylesheets/application.css
+++ b/my_rails_project/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@ body {
   color: #333333;
   background-color: #eee;
   margin: 0;
+  padding: 30px 0 0;
 }
 
 /* LINKS */
